# django-crud

./: README.md
django-crud/: db.sqlite3  manage.py  pyproject.toml
django-crud/blog/: models.py  tests.py  urls.py  views.py
django-crud/blog/migrations/: 0001_initial.py
django-crud/django_crud_project/: asgi.py  settings.py  urls.py  wsgi.py
django-crud/static/css/: base.css
django-crud/templates/: base.html  post_delete.html  post_detail.html  post_edit.html  post_new.html
