[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["venugopalakrishna-ch <venugopalakrishna.ch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
